Disable a few checks when pre-compiled headers is enabled

Seems our pre-processor visitor doesn't get called.
Not sure how to fix this properly yet.

BUG: 375264